RESOLVED FIXED242178
REGRESSION (250816@main): composite option in Element.animate() is ignored
https://bugs.webkit.org/show_bug.cgi?id=242178
Summary REGRESSION (250816@main): composite option in Element.animate() is ignored
Antoine Quint
Reported 2022-06-30 05:11:01 PDT
We used to guard the `iterationComposite` property with the same runtime flag as the `composite` property. When we introduced a dedicated flag for the iterationComposite property (bug 240727) we mistakenly switched the guard in `KeyframeEffect::create()` which governed both properties from the `composite` guard to the `iterationComposite` guard, instead of adding the two guards, one for each property. As a result, the `composite` property can no longer be set via Element.animate() or the KeyframeEffect constructor. This was found by WPT.fyi with the recent release of STP 148 which first introduced this change: https://wpt.fyi/results/web-animations/animation-model/animation-types/accumulation-per-property-001.html?q=seq%28%28status%3Apass%7Cstatus%3Aok%29%20%28status%3Apass%7Cstatus%3Aok%29%20%28status%3A%21pass%26status%3A%21ok%26status%3A%21unknown%29%20%28status%3A%21pass%26status%3A%21ok%26status%3A%21unknown%29%29&run_id=6308426865967104&run_id=5702899928662016&run_id=5636710942638080&run_id=5070812443836416
Attachments
Antoine Quint
Comment 1 2022-06-30 05:13:47 PDT
Radar WebKit Bug Importer
Comment 2 2022-06-30 05:20:25 PDT
EWS
Comment 3 2022-06-30 09:24:22 PDT
Committed 251998@main (4fa06c18977a): <https://commits.webkit.org/251998@main> Reviewed commits have been landed. Closing PR #1943 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.