REGRESSION (250816@main): composite option in Element.animate() is ignored https://bugs.webkit.org/show_bug.cgi?id=242178

Reviewed by Tim Nguyen.

We used to guard the `iterationComposite` property with the same runtime flag as the `composite` property.
When we introduced a dedicated flag for the iterationComposite property (bug 240727) we mistakenly switched
the guard in `KeyframeEffect::create()` which governed both properties from the `composite` guard to the
`iterationComposite` guard, instead of adding the two guards, one for each property. As a result, the
`composite` property can no longer be set via Element.animate() or the KeyframeEffect constructor.

We now check for those guards individually to set the right property.

* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::create):

Canonical link: https://commits.webkit.org/251998@main